EVALSYS-1310 Fixed group scale labels collapsing in the absence of a middle label
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/branches/unicon-ucb@80665 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/tool/src/webapp/content/css/evaluation_base.css
+++ b/tool/src/webapp/content/css/evaluation_base.css
@@ -1839,9 +1839,13 @@ table#user-perms-table td.userPerms > span:nth-child(2n) {
   position: absolute;
   width: 1px;
 }
+.evaluation .item-group .response-scale-container {
+  height: 1em;
+  display: block;
+}
 .evaluation .item-group .response-group-labels {
   display: block;
-  margin-top: 0.5em;
+  margin-top: 0.75em;
   text-align: right !important;
   white-space: nowrap;
 }
@@ -1859,8 +1863,7 @@ table#user-perms-table td.userPerms > span:nth-child(2n) {
 .evaluation .item-group .response-scale-na {
   margin-right: 11px;
   width: 24px;
-  padding: 0 13px;
-  padding-right: 18px\9;
+  padding: 0 17px 0 13px;
 }
 .evaluation .item-group .item .matrix {
   padding-top: 8px;
